--- a/pom.xml
+++ b/pom.xml
@@ -44,5 +44,13 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.26.0</version> <!-- Latest stable version -->
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 </project>
